--- a/css/_soundbutton.scss
+++ b/css/_soundbutton.scss
@@ -11,15 +11,15 @@
         z-index: 999;
         animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
         box-shadow: 0 0 0 0 white;
-        margin-right: 2.5rem;
+        margin-right: 2rem;
 
         i{
             font-size: 2.5rem;
         }
 
-        .tooltip{
-            right: -5rem;
-        }
+        .tooltip-inner{
+            left:100px !important;
+       }
     }
 }
 
