--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -1,61 +1,43 @@
 #contact{    
+    padding-top: 60px;
+
     .title-part{
         font-size: 4.5rem;
     }
     .contact-form-container {
-        background: #F1ECE6;
+        background: $box-background; /* #F1ECE6 */
         margin: 5rem auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: stretch;
+        max-width: 600px;
+        box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.25)!important;        
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
 
         .contact-me {
-            position: relative;
-            width: 250px;
-            background:#060709;
-            background-size: 250px auto;
-            overflow: hidden;
-            
-            &::before {
-                position: absolute;
-                content: "";
-                bottom: -50px;
-                left: -100px;
-                height: 180px;
-                width: 400px;
-                background: $rouge;
-                transform: rotate(25deg);
-            }
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            background: linear-gradient(120deg, $rouge 50%, $bleu 50%);            
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
         
-            &::after {
-                position: absolute;
-                content: "";
-                bottom: -80px;
-                right: -100px;
-                height: 200px;
-                width: 400px;
-                background: $bleu;
-                transform: rotate(-25deg);
-            }
-
             .contact-header {
                 color: white;
-                position: absolute;
-                transform: rotate(-90deg);
-                top: 90px;
-                left: -50px;
+                top: 0;
+                left: 0;
         
                 h2 {
-                font-size: 1.75rem;
+                    font-size: 1.75rem;
+                    margin: 0;
+                    padding: 0;
                 }
             }
 
-            .social-bar {
-                position: absolute;
-                bottom: 19px;
-                left: 0px;
-                right: 0px;
-                margin: 0 auto;
-                z-index: 1;
-                width: 250px;
-            
+            .social-bar {                
                 ul {
                     list-style-type: none;
                 
@@ -65,8 +47,7 @@
                         width: 45px;
                         height: 45px;
                         line-height: 45px;
-                        text-align: center;
-                        margin-right: -4px;
+                        padding-top: 0.25rem;
 
                         i{
                             font-size: 2.5rem;
@@ -76,54 +57,36 @@
             }
         }
 
+        @include xs{
+            .contact-me {
+                background: linear-gradient(120deg, $rouge 52.5%, $bleu 52.5%);  
+            }
+            .contact-header h2 {
+                font-size: 1.5rem !important;
+            }
+            .social-bar ul li {
+                width: 40px !important;
+                i{   
+                    font-size: 2.2rem !important;
+                }
+            }
+        }
+
         .header {
             text-align: center;
             padding: 10px 0;
         
             h2 {
-                font-family: 'Raleway';
-                color: #444;
+                font-family: 'Roboto';
+                color: white;
                 margin: 0;
                 font-weight: 300;
             }
         }
 
-        .network {
-            text-align: center;
-            padding: 20px 0;
-            color: #444;
-      
-            h3, a {
-                font-size: 1.6rem;
-                font-weight: 500;
-                color: #444;
-            }
-    
-            i {
-                color: $rouge;
-                font-size: 2.5rem;
-                margin-bottom: 10px;
-            }
-        }
-
-        .network{
-            display: none;
-
-            .net-flex{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                i{
-                    color: #444;
-                    font-size: 2rem;
-                    padding: 20px 0;
-                    margin: 0 2.5rem;
-                }
-            }
-        }
-
         .contact-form {
-            padding-bottom: 40px;
+            padding-bottom: 60px;
+            position: relative;
             
             form {
                 position: relative;
@@ -248,71 +211,5 @@
                 }
             }
         }  
-    }
-
-
-    /* Layout Stuff */
-    .contact-form-container {
-    max-width: 800px;
-    display: grid;
-    grid-template-columns: 0.5fr 1fr;
-    grid-template-rows: 0.5fr 2fr;
-    grid-template-areas: "contact-me header" "contact-me contact-form";
-    box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.25)!important;
-    }
-
-    .contact-me {
-    grid-area: contact-me;
-    }
-
-    .header {
-    grid-area: header;
-    }
-
-    .network {
-        grid-area: network;
-    }
-
-    .contact-form {
-    grid-area: contact-form;
-    }
-
-    @include sm {
-        .contact-me {
-            display: none;
-        }        
-        .network{
-            display: inline-block !important;
-            .net-flex{
-                i{
-                    font-size: 2rem;
-                    padding-top: 1rem !important;
-                    margin: 0 2rem !important;
-                }
-            }
-        }
-        .contact-form-container {
-            margin: 5rem auto;
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 0.5fr 0.5fr 2fr;
-            grid-template-areas: "header" "network" "contact-form";
-        }
-    }
-
-    @include xs {
-        .network{
-            display: inline-block !important;
-        }
-        .network {
-            padding: 5px 0 !important;
-        }
-        .contact-form-container {
-            margin: auto;
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 0.5fr 0.5fr 2fr;
-            grid-template-areas: "header" "network" "contact-form";
-        }
     }
 }
