--- a/css/_equalizer.scss
+++ b/css/_equalizer.scss
@@ -38,7 +38,7 @@ $animation-name: 'pump-it-up';
 #equalizer {
     width: 100%;
     height: 100%;
-    padding-top: 50px;
+    padding-top: 75px;
     margin-top: 3rem;
 
     #levels {
@@ -61,7 +61,7 @@ $animation-name: 'pump-it-up';
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                background: #FBCE41;
+                background: $rouge;
                 width: 3px;                
             }
 
