--- a/css/_preloader.scss
+++ b/css/_preloader.scss
@@ -23,7 +23,7 @@
 .ip-logo {
 	z-index: 10;
 	left: 0;
-	top: -75%;
+	top: -55%; /* -75% */
 	height: 200px;
 	transform: translateX(-50%) translateY(-50%);
 	font-family: "Montserrat" !important;
