--- a/css/_about.scss
+++ b/css/_about.scss
@@ -23,6 +23,7 @@
             line-height: 2rem;
             word-spacing: 4px;
             margin-bottom: 2rem;
+            padding: 0 1rem;
         }
         i{
             color: $bleu;
