--- a/css/_works.scss
+++ b/css/_works.scss
@@ -6,8 +6,9 @@
     }
 
     .carousel-block{
-        max-width: 50%;
+        max-width: 40%;
         margin: 5rem auto;
+        padding: 0 7.5rem;
     }
 
     #carouselWorks{
@@ -39,6 +40,10 @@
                 max-width: auto;
             }
 
+            .description{
+                height: 80%;
+            }
+
             .carousel-caption{
                 h5{
                     color: white;
@@ -48,11 +53,23 @@
                 }
             }
         }
+        .paysage{
+            height: 500px !important;
+
+            img{
+                border-radius: 5px 5px 0 0;
+            }
+        }
+        
+        .title{
+            position: static;
+            bottom: 0;
+        }
 
 
         .carousel-inner{
             height: 500px;
-            width: 80%;
+            width: 100%;
             margin: 0 auto;
         }
 
@@ -60,6 +77,7 @@
             display: flex;
             justify-content: flex-start;
             align-items: center;
+            left: -75px;
 
             span{
                 margin: 2rem;
@@ -83,6 +101,7 @@
             display: flex;
             justify-content: flex-end;
             align-items: center;
+            right: -75px;
 
             span{
                 margin: 2rem;
@@ -104,9 +123,28 @@
     }
 }
 
+@include xl{
+    .carousel-block{
+        max-width: 65% !important;
+    }
+}
+
 @include md{
     .carousel-block{
         max-width: 90% !important;
-        margin: 5rem auto;
+        padding: 0 !important;
+    }
+    .carousel-control-next, .carousel-control-prev{
+        display: none !important;
+    }
+}
+
+@include xs{
+    .carousel-block{
+        max-width: 90% !important;
+        padding: 0 !important;
+    }
+    .carousel-control-next, .carousel-control-prev{
+        display: none !important;
     }
 }
