--- a/css/_about.scss
+++ b/css/_about.scss
@@ -25,6 +25,9 @@
             margin-bottom: 2rem;
             padding: 0 1rem;
         }
+        img{
+            height: 9rem;
+        }
         i{
             color: $bleu;
             font-size: 2rem;
