--- a/css/index.css
+++ b/css/index.css
@@ -1251,6 +1251,10 @@ nav {
   padding: 0 1rem;
 }
 
+#about .description img {
+  height: 9rem;
+}
+
 #about .description i {
   color: #13c9d7;
   font-size: 2rem;
@@ -1443,16 +1447,16 @@ nav {
   20% {
   }
   40% {
-    height: 37px;
+    height: 3px;
   }
   60% {
-    height: 46px;
+    height: 3px;
   }
   80% {
-    height: 48px;
+    height: 42px;
   }
   100% {
-    height: 44px;
+    height: 31px;
   }
 }
 
@@ -1460,16 +1464,16 @@ nav {
   20% {
   }
   40% {
-    height: 36px;
+    height: 25px;
   }
   60% {
-    height: 33px;
+    height: 42px;
   }
   80% {
-    height: 17px;
+    height: 5px;
   }
   100% {
-    height: 14px;
+    height: 34px;
   }
 }
 
@@ -1477,16 +1481,16 @@ nav {
   20% {
   }
   40% {
-    height: 15px;
+    height: 49px;
   }
   60% {
-    height: 21px;
-  }
-  80% {
     height: 27px;
   }
+  80% {
+    height: 39px;
+  }
   100% {
-    height: 46px;
+    height: 7px;
   }
 }
 
@@ -1494,16 +1498,16 @@ nav {
   20% {
   }
   40% {
-    height: 45px;
+    height: 23px;
   }
   60% {
-    height: 35px;
+    height: 7px;
   }
   80% {
-    height: 30px;
+    height: 18px;
   }
   100% {
-    height: 16px;
+    height: 18px;
   }
 }
 
@@ -1511,16 +1515,16 @@ nav {
   20% {
   }
   40% {
-    height: 31px;
+    height: 16px;
   }
   60% {
-    height: 40px;
+    height: 24px;
   }
   80% {
-    height: 26px;
+    height: 38px;
   }
   100% {
-    height: 37px;
+    height: 35px;
   }
 }
 
@@ -1528,16 +1532,16 @@ nav {
   20% {
   }
   40% {
-    height: 43px;
+    height: 40px;
   }
   60% {
-    height: 25px;
+    height: 24px;
   }
   80% {
-    height: 38px;
+    height: 9px;
   }
   100% {
-    height: 46px;
+    height: 27px;
   }
 }
 
@@ -1545,16 +1549,16 @@ nav {
   20% {
   }
   40% {
-    height: 26px;
+    height: 7px;
   }
   60% {
-    height: 30px;
+    height: 20px;
   }
   80% {
-    height: 15px;
+    height: 40px;
   }
   100% {
-    height: 33px;
+    height: 32px;
   }
 }
 
@@ -1562,16 +1566,16 @@ nav {
   20% {
   }
   40% {
-    height: 43px;
+    height: 40px;
   }
   60% {
-    height: 19px;
+    height: 12px;
   }
   80% {
-    height: 20px;
+    height: 50px;
   }
   100% {
-    height: 41px;
+    height: 8px;
   }
 }
 
@@ -1579,16 +1583,16 @@ nav {
   20% {
   }
   40% {
-    height: 40px;
+    height: 35px;
   }
   60% {
-    height: 31px;
+    height: 12px;
   }
   80% {
-    height: 16px;
+    height: 47px;
   }
   100% {
-    height: 22px;
+    height: 20px;
   }
 }
 
@@ -1596,16 +1600,16 @@ nav {
   20% {
   }
   40% {
-    height: 10px;
+    height: 48px;
   }
   60% {
-    height: 26px;
+    height: 11px;
   }
   80% {
-    height: 45px;
+    height: 9px;
   }
   100% {
-    height: 17px;
+    height: 13px;
   }
 }
 
@@ -1613,16 +1617,16 @@ nav {
   20% {
   }
   40% {
-    height: 13px;
+    height: 34px;
   }
   60% {
-    height: 43px;
+    height: 28px;
   }
   80% {
-    height: 21px;
+    height: 48px;
   }
   100% {
-    height: 4px;
+    height: 50px;
   }
 }
 
@@ -1630,16 +1634,16 @@ nav {
   20% {
   }
   40% {
-    height: 23px;
+    height: 22px;
   }
   60% {
-    height: 15px;
+    height: 19px;
   }
   80% {
-    height: 44px;
+    height: 32px;
   }
   100% {
-    height: 8px;
+    height: 46px;
   }
 }
 
@@ -1647,16 +1651,16 @@ nav {
   20% {
   }
   40% {
-    height: 15px;
+    height: 36px;
   }
   60% {
-    height: 25px;
+    height: 10px;
   }
   80% {
-    height: 12px;
+    height: 28px;
   }
   100% {
-    height: 9px;
+    height: 8px;
   }
 }
 
@@ -1664,13 +1668,13 @@ nav {
   20% {
   }
   40% {
-    height: 18px;
+    height: 31px;
   }
   60% {
-    height: 36px;
+    height: 8px;
   }
   80% {
-    height: 30px;
+    height: 26px;
   }
   100% {
     height: 25px;
@@ -1681,16 +1685,16 @@ nav {
   20% {
   }
   40% {
-    height: 30px;
+    height: 3px;
   }
   60% {
-    height: 37px;
+    height: 1px;
   }
   80% {
-    height: 24px;
+    height: 2px;
   }
   100% {
-    height: 41px;
+    height: 36px;
   }
 }
 
@@ -1698,16 +1702,16 @@ nav {
   20% {
   }
   40% {
-    height: 40px;
+    height: 46px;
   }
   60% {
-    height: 43px;
+    height: 13px;
   }
   80% {
-    height: 5px;
+    height: 37px;
   }
   100% {
-    height: 41px;
+    height: 21px;
   }
 }
 
@@ -1715,16 +1719,16 @@ nav {
   20% {
   }
   40% {
-    height: 39px;
+    height: 26px;
   }
   60% {
-    height: 15px;
+    height: 30px;
   }
   80% {
-    height: 7px;
+    height: 9px;
   }
   100% {
-    height: 34px;
+    height: 28px;
   }
 }
 
@@ -1732,16 +1736,16 @@ nav {
   20% {
   }
   40% {
-    height: 15px;
+    height: 4px;
   }
   60% {
-    height: 43px;
+    height: 12px;
   }
   80% {
-    height: 43px;
+    height: 33px;
   }
   100% {
-    height: 7px;
+    height: 6px;
   }
 }
 
@@ -1749,16 +1753,16 @@ nav {
   20% {
   }
   40% {
-    height: 26px;
+    height: 23px;
   }
   60% {
-    height: 6px;
+    height: 36px;
   }
   80% {
-    height: 1px;
+    height: 17px;
   }
   100% {
-    height: 11px;
+    height: 26px;
   }
 }
 
@@ -1766,16 +1770,16 @@ nav {
   20% {
   }
   40% {
-    height: 29px;
+    height: 1px;
   }
   60% {
-    height: 42px;
+    height: 50px;
   }
   80% {
-    height: 5px;
+    height: 8px;
   }
   100% {
-    height: 12px;
+    height: 4px;
   }
 }
 
@@ -1814,63 +1818,63 @@ nav {
 }
 
 #equalizer #levels .level.level1:after {
-  height: 33px;
-  -webkit-animation: pump-it-up1 2453ms linear infinite alternate;
-          animation: pump-it-up1 2453ms linear infinite alternate;
+  height: 48px;
+  -webkit-animation: pump-it-up1 5986ms linear infinite alternate;
+          animation: pump-it-up1 5986ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level2:after {
-  height: 16px;
-  -webkit-animation: pump-it-up2 5162ms linear infinite alternate;
-          animation: pump-it-up2 5162ms linear infinite alternate;
+  height: 6px;
+  -webkit-animation: pump-it-up2 4168ms linear infinite alternate;
+          animation: pump-it-up2 4168ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level3:after {
-  height: 20px;
-  -webkit-animation: pump-it-up3 6266ms linear infinite alternate;
-          animation: pump-it-up3 6266ms linear infinite alternate;
+  height: 14px;
+  -webkit-animation: pump-it-up3 5409ms linear infinite alternate;
+          animation: pump-it-up3 5409ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level4:after {
-  height: 46px;
-  -webkit-animation: pump-it-up4 3142ms linear infinite alternate;
-          animation: pump-it-up4 3142ms linear infinite alternate;
+  height: 29px;
+  -webkit-animation: pump-it-up4 2545ms linear infinite alternate;
+          animation: pump-it-up4 2545ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level5:after {
-  height: 14px;
-  -webkit-animation: pump-it-up5 4113ms linear infinite alternate;
-          animation: pump-it-up5 4113ms linear infinite alternate;
+  height: 44px;
+  -webkit-animation: pump-it-up5 4634ms linear infinite alternate;
+          animation: pump-it-up5 4634ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level6:after {
-  height: 46px;
-  -webkit-animation: pump-it-up6 6225ms linear infinite alternate;
-          animation: pump-it-up6 6225ms linear infinite alternate;
+  height: 49px;
+  -webkit-animation: pump-it-up6 3356ms linear infinite alternate;
+          animation: pump-it-up6 3356ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level7:after {
-  height: 50px;
-  -webkit-animation: pump-it-up7 4737ms linear infinite alternate;
-          animation: pump-it-up7 4737ms linear infinite alternate;
+  height: 10px;
+  -webkit-animation: pump-it-up7 2776ms linear infinite alternate;
+          animation: pump-it-up7 2776ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level8:after {
-  height: 7px;
-  -webkit-animation: pump-it-up8 6310ms linear infinite alternate;
-          animation: pump-it-up8 6310ms linear infinite alternate;
+  height: 11px;
+  -webkit-animation: pump-it-up8 2391ms linear infinite alternate;
+          animation: pump-it-up8 2391ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level9:after {
-  height: 21px;
-  -webkit-animation: pump-it-up9 2266ms linear infinite alternate;
-          animation: pump-it-up9 2266ms linear infinite alternate;
+  height: 4px;
+  -webkit-animation: pump-it-up9 6462ms linear infinite alternate;
+          animation: pump-it-up9 6462ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level10:after {
-  height: 21px;
-  -webkit-animation: pump-it-up10 6782ms linear infinite alternate;
-          animation: pump-it-up10 6782ms linear infinite alternate;
+  height: 39px;
+  -webkit-animation: pump-it-up10 4775ms linear infinite alternate;
+          animation: pump-it-up10 4775ms linear infinite alternate;
 }
 
 #contact {
